--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>contohprojectmaven</groupId>
-  <artifactId>contohproject</artifactId>
+  <groupId>contohprojectmavenralfi</groupId>
+  <artifactId>contohprojectralfi</artifactId>
   <version>0.3.5</version>
 
 <dependencies>
@@ -16,7 +16,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/jatihusen/Basic-Java-Maven</url>
+      <url>https://maven.pkg.github.com/Ralfi/Basic-Java-Maven</url>
     </repository>
   </distributionManagement>
   
